--- a/index.html
+++ b/index.html
@@ -3,11 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>To-do List</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <h1>My page</h1>
+    <header>
+    <h1>To-do List</h1>
+    </header>
+    <main class="container">
+        <label for="inputList">
+            Enter to-do list item here:
+            <br>
+        <input type="text" class="userInput" name="inputList">
+    </label>
+        <ul class="itemlist">
+        
+        </ul>
+        <button class="submit">Submit</button>
+    </main>
     <script src="./index.js"></script> 
 </body>
 </html>
