--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <br>
         <input type="text" class="userInput" name="inputList">
     </label>
-        <ul class="itemlist">
+        <ul class="itemList">
             
         </ul>
         <button class="submit">Submit</button>
